--- a/files/cv.tex
+++ b/files/cv.tex
@@ -39,7 +39,7 @@
 
 % % Don't indent paragraphs.
 \setlength\parindent{0em}
-\setlength\parskip{0.5em}
+\setlength\parskip{0em}
 
 % % Make lists without bullets
 % \renewenvironment{itemize}{
@@ -53,20 +53,12 @@
 \begin{document}
 
 {\huge\bf Márton Fleck}
-
-\medskip
+\parskip 0.5em
 
 PhD candidate in Economics \\
-Central European University \\
-Budapest, Hungary \\
-
-\medskip
-
-E-mail: \href{mailto:martonfleck@gmail.com}{\tt martonfleck@gmail.com} \\
-Site: \href{http://https://martonfleck.github.io//}{\tt https://martonfleck.github.io/} \\
-\medskip
-
-
+Central European University, Budapest \\
+\href{mailto:martonfleck@gmail.com}{\tt martonfleck@gmail.com} \\
+\href{http://https://martonfleck.github.io//}{\tt https://martonfleck.github.io/}
 % \section*{References}
 % \begin{minipage}{0.5\textwidth}
 % Adam Szeidl\\
@@ -84,7 +76,6 @@ Site: \href{http://https://martonfleck.github.io//}{\tt https://martonfleck.gith
 % Central European University\\
 % \href{mailto:matyas@ceu.edu}{matyas@ceu.edu}
 % \end{minipage}
-
 \section*{Education}
 
 \begin{itemize}
@@ -138,6 +129,23 @@ Site: \href{http://https://martonfleck.github.io//}{\tt https://martonfleck.gith
     \item Gaining experience in a wide range of sectors, including telecommunications, cargo logistics, and FMCG
   \end{itemize}
 
+  \item Hungarian Academy of Sciences, CERS Databank, 2016
+  \begin{itemize}
+    \item Analyst intern
+    \item Econometric analysis on large-scale administrative data
+  \end{itemize}  
+
+  \item Institute for Economic and Enterprise Research (GVI), 2015
+  \begin{itemize}
+    \item Analyst
+    \item Co-author – analyzing data, writing a \href{http://gvi.hu/files/researches/453/prognozis_2015_tanulmany_160801.pdf}{chapter} (in Hungarian)
+  \end{itemize}  
+
+  % \item Corruption Research Center Budapest, 2015
+  % \begin{itemize}
+  %   \item Analyst intern
+  %   \item Co-author – collecting and analyzing data, writing a \href{http://www.crcb.eu/wp-content/uploads/2016/07/lg_sites_2015_report_160718_.pdf}{paper}
+  % \end{itemize}
 \end{itemize}
 
 \section*{Teaching experience}
