--- a/files/cv.tex
+++ b/files/cv.tex
@@ -121,7 +121,7 @@ Central European University, Budapest \\
     \item Collecting, cleaning, and analyzing large scale datasets using Python and Stata
     \item Supervised by \href{http://www.personal.ceu.hu/staff/Adam_Szeidl/}{Adam Szeidl} and \href{https://koren.mk}{Miklos Koren}
   \end{itemize}
-
+\medskip
   \item RBB Economics, The Hague, Netherlands, 2018
   \begin{itemize}
     \item Summer Associate
@@ -172,10 +172,10 @@ Central European University, Budapest \\
 \end{itemize}
 
 % Footer
-\begin{center}
-\begin{footnotesize}
-Last updated: \today \\
-\href{http://martonfleck.github.io}{\tt http://martonfleck.github.io}
-\end{footnotesize}
-\end{center}
+% \begin{center}
+% \begin{footnotesize}
+% Last updated: \today \\
+% \href{http://martonfleck.github.io}{\tt http://martonfleck.github.io}
+% \end{footnotesize}
+% \end{center}
 \end{document}
