--- a/files/cv.tex
+++ b/files/cv.tex
@@ -58,7 +58,7 @@
 PhD candidate in Economics \\
 Central European University, Budapest \\
 \href{mailto:martonfleck@gmail.com}{\tt martonfleck@gmail.com} \\
-\href{https://martonfleck.github.io}{\tt martonfleck.github.io/}
+\href{https://martonfleck.github.io}{\tt martonfleck.github.io}
 % \section*{References}
 % \begin{minipage}{0.5\textwidth}
 % Adam Szeidl\\
